    - For the perl_build build system, Build is used consistently
      instead of falling back to using the generated Makefile.
      Closes: #534332
    - Historical dh_auto_* behavior should be preserved despite these
      large changes..
  * Move two more command-specific options to only be accepted by the commands
    that use them. The options are:
    --sourcedir, --destdir
  * If any third-party debhelper commands use either of the above options,
    they will be broken, and need to be changed to pass options to init().

 -- Joey Hess <joeyh@debian.org>  Mon, 20 Apr 2009 16:26:08 -0400

debhelper (7.2.18) unstable; urgency=low

  * dh_shlibdeps: Ensure DEBIAN directory exists, as dpkg-shlibdeps
    prints a confusing warning if it does not. Closes: #534226
  * dh_auto_install: Pass --install-layout=deb to setup.py
    to support python 2.6. Closes: #534620

 -- Joey Hess <joeyh@debian.org>  Mon, 29 Jun 2009 15:35:40 -0400

debhelper (7.2.17) unstable; urgency=low

  * Allow command-specific options to be passed to commands
    via dh without causing other commands to emit a getopt
    warning or deprecation message.
  * dh_installinfo: No longer inserts install-info calls into
    maintainer scripts, as that is now triggerized. Adds a dependency
    via misc:Depends to handle partial upgrades. Note that while
    dh_installinfo already required that info files had a INFO-DIR-SECTION,
    the new system also requires they have START-INFO-DIR-ENTRY and
    END-INFO-DIR-ENTRY for proper registration. I assume there will be
    some mass bug filing for any packages that do not have that.
    Closes: #528864, #357434

 -- Joey Hess <joeyh@debian.org>  Fri, 26 Jun 2009 09:02:51 -0400

debhelper (7.2.16) unstable; urgency=low

  * dh_gconf: Add missed half of postrm fragment removal. Closes: #531035

 -- Joey Hess <joeyh@debian.org>  Thu, 11 Jun 2009 12:50:33 -0400

debhelper (7.2.15) unstable; urgency=low
