@@ -21,8 +21,11 @@ debhelper (7.3.0) UNRELEASED; urgency=low
   * Move two more command-specific options to only be accepted by the commands
     that use them. The options are:
     --sourcedir, --destdir
-  * If any third-party debhelper commands use either of the above options,
+    If any third-party debhelper commands use either of the above options,
     they will be broken, and need to be changed to pass options to init().
+  * Make dh not complain about unknown, command-specific options passed to it,
+    and further suppress warnings about such options it passes on to debhelper
+    commands. This was attempted incompletely before in version 7.2.17.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 20 Apr 2009 16:26:08 -0400
 
